even more java17 compat